feat: 주석 정리 및 코드 최적화 진행